ServidorFISQL/src/servidorfisql/interpretes/Analizadores/PlyCS/analizador/ParserPlyCS.java
/* Generated By:JavaCC: Do not edit this line. ParserPlyCS.java */
        package servidorfisql.interpretes.Analizadores.PlyCS.analizador;

        import servidorfisql.interpretes.Nodo;

        public class ParserPlyCS implements ParserPlyCSConstants {
                public static void main(String[] args) throws ParseException{
                                try{
                                        ParserPlyCS parser = new ParserPlyCS(System.in);
                                        parser.INI();
                                }catch(ParseException pe){
                                        System.err.println("Error en el analisis...");
                                        System.err.println(pe.getMessage());
                                }
                        }

  final public Nodo INI() throws ParseException {
        Nodo nodo;
    nodo = OBJECT();
    jj_consume_token(0);
                                 {if (true) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo OBJECT() throws ParseException {
        Nodo nodo = new Nodo("REQUEST");
    jj_consume_token(8);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case cad:
      nodo = MEMBERS();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(9);
                                         {if (true) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo MEMBERS() throws ParseException {
        Nodo nodo = new Nodo("REQUEST");
        Nodo hijo;
    hijo = PAIR();
                         nodo.agregarHijo(hijo);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 10:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(10);
      hijo = PAIR();
                                                                       nodo.agregarHijo(hijo);
    }
         {if (true) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo PAIR() throws ParseException {
        Nodo nodo;
        Nodo hijo;
        Token t;
    t = jj_consume_token(cad);
    jj_consume_token(11);
    hijo = VALUE(t.image.substring(1, t.image.length() - 1));
                                                                                 nodo = hijo;
         {if (true) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo VALUE(String token) throws ParseException {
        Nodo nodo;
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case cad:
      t = jj_consume_token(cad);
                                 nodo = new Nodo(token, t.image.substring(1, t.image.length() - 1));
      break;
    case num:
      t = jj_consume_token(num);
                                 nodo = new Nodo(token, t.image);
      break;
    case bool:
      t = jj_consume_token(bool);
                                 nodo = new Nodo(token, t.image);
      break;
    case 8:
      nodo = OBJECT();
                         nodo.setToken(token);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return nodo;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ParserPlyCSTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x80,0x400,0x1e0,};
   }

  /** Constructor with InputStream. */
  public ParserPlyCS(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ParserPlyCS(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserPlyCSTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ParserPlyCS(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserPlyCSTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ParserPlyCS(ParserPlyCSTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserPlyCSTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[12];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 12; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

                }
